test/Fail/Issue1436-9.err
Issue1436-9.agda:15.7-14: error: [AmbiguousParseForApplication]
Don't know how to parse ! X , X. Could mean any one of:
  ! (G λ X → X)
  ! (F λ X → X)
Operators used in the grammar:
  !  (prefix operator, level 1)   [!_ (Issue1436-9.agda:3.3-5)]
  _, (prefix notation, level 2)   [F (Issue1436-9.agda:2.3-4)] 
  ,_ (postfix notation, level 20) [G (Issue1436-9.agda:2.5-6)] 
when scope checking ! X , X
